@@ -1,3 +1,7 @@
+2010-10-27  Dmitry Dulepov  <dmitry@typo3.org>
+
+	* Added a new TS setting to force a certain amount of linsk to pages
+
 2010-02-02  Dmitry Dulepov  <dmitry.dulepov+typo3svn@gmail.com>
 
 	* Committed some fixes made for clients
